[package]
name = "rbxapi"
version = "0.1.0"
authors = ["PythonicIconic <coatedalmond@protonmail.com>"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["cookies", "json"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.42"
serde_json = "1.0"
