[package]
name = "rbxapi"
description = "A Rust library for the Roblox API."
version = "0.1.1"
authors = ["PythonicIconic <coatedalmond@protonmail.com>"]
license = "ISC"
homepage = "https://github.com/PythonicIconic/RbxAPI-rs"
repository = "https://github.com/PythonicIconic/RbxAPI-rs.git"
keywords = ["roblox", "api"]
readme = "README.md"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["cookies", "json"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.42"
serde_json = "1.0"
